feat: health route
