# src/graphql/routers/ping.js
@@ -1,50 +1,32 @@
 const router = require('express').Router();
 
-const myPromise = require('../bin/utils');
-
+const pingWithTimeout = require('../bin/ping');
 const { pingRedis } = require('../lib/service/redis');
 const { pingElastic } = require('../lib/service/elastic');
 
 router.get('/', async (req, res) => res.status(200).json('graphql service'));
 
-router.get('/ping', async (req, res, next) => res.status(200).json());
+router.get('/ping', async (req, res, next) => res.status(200).json('pong'));
 
 router.get('/health/redis', async (req, res, next) => {
-  const start = Date.now();
+  const resultPing = await pingWithTimeout(pingRedis(), 'redis', 3000);
 
-  let status;
-  try {
-    status = await myPromise(3000, async (resolve, reject) => {
-      const resultPing = await pingRedis();
-      if (resultPing) return resolve(true);
-      return reject(false);
-    });
-  } catch (err) {
-    const end = Date.now();
-    return res.status(200).json({
-      name: 'redis', status: false, elapsedTime: end - start, error: err?.message,
-    });
-  }
-
-  const end = Date.now();
-
-  return res.status(200).json({
-    name: 'redis', status, elapsedTime: end - start,
-  });
+  return res.status(200).json(resultPing);
 });
 
-router.get('/ping/elastic', async (req, res, next) => {
-  const start = Date.now();
+router.get('/health/elastic', async (req, res, next) => {
+  const resultPing = await pingWithTimeout(pingElastic(), 'elastic', 3000);
 
-  try {
-    await pingElastic();
-  } catch (err) {
-    return next({ message: err });
-  }
+  return res.status(200).json(resultPing);
+});
 
-  const end = Date.now();
+router.get('/health', async (req, res, next) => {
+  const p1 = pingWithTimeout(pingRedis(), 'redis', 3000);
+  const p2 = pingWithTimeout(pingElastic(), 'elastic', 3000);
 
-  return res.status(200).json(end - start);
+  const result = await Promise.all([p1, p2]);
+
+  return res.status(200).json(result);
 });
 
 module.exports = router;
